<resources>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_suggested">Sign in with another user</string>
    <string name="sign_in_as">Sign in As...</string>
    <string name="sign_up">Register</string>
    <string name="sign_up_note">Note: Account expires after 24 hours</string>
    <string name="not_registered_an_account">Don\'t have an account? Sign up</string>
    <string name="already_have_an_account">I already have an account. Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_confirmed_password">The passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_authenticators">No authenticators added.</string>
    <string name="no_authenticators_error">Can\'t obtain list of authenticators: %1$s</string>
    <string name="require_authenticators">At least 1 authenticator required</string>
    <string name="require_platform_authenticators_title">Register platform authenticator</string>
    <string name="require_platform_authenticators">Do you want to add passwordless authentication with platform authenticator?</string>
    <string name="retry">Retry</string>
    <string name="request">Request</string>
    <string name="sign_out">Sign out</string>
    <string name="password_less_sign_in">Sign in with username:</string>
    <string name="added_format">Added: %1$s</string>
    <string name="used_format">Last used: %1$s</string>
    <string name="settings">Settings</string>
    <string name="authenticator">Authenticator</string>

    <string-array name="operations">
        <item>Delete</item>
        <item>Rename</item>
    </string-array>
    <integer-array name="operations_logo">
        <item>@android:drawable/ic_menu_delete</item>
        <item>@android:drawable/ic_menu_edit</item>
    </integer-array>

</resources>
